--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2333,6 +2333,9 @@
         letter-spacing: -0.7px;
 
     }
+    .faq-title h2 {
+        margin-left: 20px;
+    }
 
     .trust-decor img {
         object-position: 0 -300px;
