--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -490,7 +490,7 @@
     max-height: 71px;
     height: 100%;
     width: 100%;
-    object-fit: cover;
+    object-fit: fill;
     flex: 0 0 73px;
     background-color: transparent;
     display: block;
