--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -109,7 +109,7 @@
 .footer-blur--two {
     position: absolute;
     right: 0;
-    bottom: 0;
+    bottom: 10px;
 }
 
 @media (max-width: 1400px) {
